Add paragraphs to display as column

--- a/index.html
+++ b/index.html
@@ -10,53 +10,53 @@
     <body>
         <h1>Oops I did it again</h1>
         <h2>Song by Britney Spears</h2>
-        <p>Yeah yeah yeah yeah yeah
-            Yeah yeah yeah yeah yeah yeah</p>
-        <p>I think I did it again
-            I made you believe we're more than just friends
-            Oh baby
-            It might seem like a crush
-            But it doesn't mean that I'm serious
-            'Cause to lose all my senses
-            That is just so typically me
-            Oh baby, baby</p>
-        <p>Oops, I did it again
-            I played with your heart, got lost in the game
-            Oh baby, baby
-            Oops, you think I'm in love
-            That I'm sent from above
-            I'm not that innocent</p>
-        <p>You see my problem is this
-            I'm dreaming away
-            Wishing that heroes, they truly exist
-            I cry, watching the days
-            Can't you see I'm a fool in so many ways
-            But to lose all my senses
-            That is just so typically me
-            Oh baby, oh</p>
-        <p>Oops, I did it again
-            I played with your heart, got lost in the game
-            Oh baby, baby
-            Oops, you think I'm in love
-            That I'm sent from above
-            I'm not that innocent</p>
-        <p>Yeah yeah yeah yeah yeah yeah
-            Yeah yeah yeah yeah yeah yeah</p>
-        <p>Oops, I did it again to your heart
-            Got lost in this game, oh baby
-            Oops, you think that I'm sent from above
-            I'm not that innocent
-            Oops, I did it again
-            I played with your heart, got lost in the game
-            Oh baby, baby</p>
-        <p>Oops, you think I'm in love
-            That I'm sent from above
-            I'm not that innocent
-            Oops, I did it again
-            I played with your heart, got lost in the game
-            Oh baby, baby
-            Oops, you think I'm in love
-            That I'm sent from above
-            I'm not that innocent</p>
+        <p>Yeah yeah yeah yeah yeah<br>
+            Yeah yeah yeah yeah yeah yeah<br></p>
+        <p>I think I did it again<br>
+            I made you believe we're more than just friends<br>
+            Oh baby<br>
+            It might seem like a crush<br>
+            But it doesn't mean that I'm serious<br>
+            'Cause to lose all my senses<br>
+            That is just so typically me<br>
+            Oh baby, baby<br></p>
+        <p>Oops, I did it again<br>
+            I played with your heart, got lost in the game<br>
+            Oh baby, baby<br>
+            Oops, you think I'm in love<br>
+            That I'm sent from above<br>
+            I'm not that innocent<br></p>
+        <p>You see my problem is this<br>
+            I'm dreaming away<br>
+            Wishing that heroes, they truly exist<br>
+            I cry, watching the days<br>
+            Can't you see I'm a fool in so many ways<br>
+            But to lose all my senses<br>
+            That is just so typically me<br>
+            Oh baby, oh<br></p>
+        <p>Oops, I did it again<br>
+            I played with your heart, got lost in the game<br>
+            Oh baby, baby<br>
+            Oops, you think I'm in love<br>
+            That I'm sent from above<br>
+            I'm not that innocent<br></p>
+        <p>Yeah yeah yeah yeah yeah yeah<br>
+            Yeah yeah yeah yeah yeah yeah<br></p>
+        <p>Oops, I did it again to your heart<br>
+            Got lost in this game, oh baby<br>
+            Oops, you think that I'm sent from above<br>
+            I'm not that innocent<br>
+            Oops, I did it again<br>
+            I played with your heart, got lost in the game<br>
+            Oh baby, baby<br></p>
+        <p>Oops, you think I'm in love<br>
+            That I'm sent from above<br>
+            I'm not that innocent<br>
+            Oops, I did it again<br>
+            I played with your heart, got lost in the game<br>
+            Oh baby, baby<br>
+            Oops, you think I'm in love<br>
+            That I'm sent from above<br>
+            I'm not that innocent<br></p>
     </body>
 </html>
