Update author of the song

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1>It's a wonderful world</h1>
-        <h2>Song by Britney Spears</h2>
+        <h2>Song by Britney Spears written by Sir Isaac Newton</h2>
         <p>Yeah yeah yeah yeah yeah<br>
             Yeah yeah yeah yeah yeah yeah<br></p>
         <p>I think I did it again<br>
